syntax ="proto3";

option csharp_namespace = "GrpcReport";

service ReportGrpc{

	rpc GetPermissionToDeleteQuestion(PermissionRequest) returns (PermissionResponse);
}


message PermissionRequest{

}

message PermissionResponse{
	bool success = 1;
	string error = 2;
}